agoravai/force-app/main/default/objects/Partida__c/fields/Algoritmo__c.field-meta.xml
<CustomField>
    <fullName>Algoritmo__c</fullName>
    <description>Usado para informar qual classe essa partida vai chamar</description>
    <inlineHelpText>Usado para informar qual classe essa partida vai chamar</inlineHelpText>
    <label>Algoritmo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>