agoravai/force-app/main/default/objects/Partida__c/fields/Ordem__c.field-meta.xml
<CustomField>
    <fullName>Ordem__c</fullName>
    <description>Usado para determinar a ordem dos jogos</description>
    <inlineHelpText>Usado para determinar a ordem dos jogos</inlineHelpText>
    <label>Ordem</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>