agoravai/force-app/main/default/objects/Partida__c/fields/Round__c.field-meta.xml
<CustomField>
    <fullName>Round__c</fullName>
    <description>Round dessa partida</description>
    <inlineHelpText>Round dessa partida</inlineHelpText>
    <label>Round</label>
    <referenceTo>Round__c</referenceTo>
    <relationshipLabel>Partidas</relationshipLabel>
    <relationshipName>Partidas</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>