agoravai/force-app/main/default/objects/Partida__c/fields/SolicitacaoInicioPartida__c.field-meta.xml
<CustomField>
    <fullName>SolicitacaoInicioPartida__c</fullName>
    <description>Usado no processo de aprovação para iniciar uma partida</description>
    <inlineHelpText>Usado no processo de aprovação para iniciar uma partida</inlineHelpText>
    <label>Solicitação de Início da Partida</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Não Solicitado</fullName>
                <default>true</default>
                <label>Não Solicitado</label>
            </value>
            <value>
                <fullName>Em Aprovação</fullName>
            </value>
            <value>
                <fullName>Aprovado</fullName>
            </value>
            <value>
                <fullName>Rejeitado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>