agoravai/force-app/main/default/objects/Partida__c/validationRules/ValidarInicio.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidarInicio</fullName>
    <active>true</active>
    <description>Não posso iniciar uma partida se o round não foi iniciado.</description>
    <errorConditionFormula>!ISBLANK(InicioPartida__c) &amp;&amp; ISBLANK(Round__r.InicioJogos__c)</errorConditionFormula>
    <errorDisplayField>InicioPartida__c</errorDisplayField>
    <errorMessage>Você não pode iniciar uma partida se o round não foi iniciado.</errorMessage>
</ValidationRule>